--- a/index.html
+++ b/index.html
@@ -164,25 +164,33 @@ function doLogin(){
   const id = document.getElementById("loginId").value;
   const pass = document.getElementById("loginPassword").value;
 
-  fetch(LOGIN_API,{
+  fetch(`${API_BASE}/login`,{
     method:"POST",
     headers:{"Content-Type":"application/json"},
     body:JSON.stringify({
-      login_id:id,
-      password:pass
+      login_id:loginId.value,
+      password:loginPassword.value
     })
   })
-  .then(r=>r.json())
-  .then(d=>{
-
-    if(d.status==="success"){
-      document.getElementById("loginPage").style.display="none";
-      document.getElementById("gstrPage").style.display="block";
-    } else {
-      document.getElementById("loginError").innerText = "Invalid Login";
+  .then(async r=>{
+    const data = await r.json();
+  
+    if(!r.ok){
+      throw new Error(data.message || "Login failed");
     }
-
+    return data;
+  })
+  .then(d=>{
+    if(d.status==="success"){
+      alert("Login Success");
+    } else {
+      alert("Invalid credentials");
+    }
+  })
+  .catch(e=>{
+    alert("Server Error: "+e.message);
   });
+
 }
 
 
@@ -327,3 +335,4 @@ runBtn.onclick=()=>{
 
 </body>
 </html>
+
